# deribit-http

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl
.github/: dependabot.yml
.github/workflows/: build.yml  code_coverage.yml  format_check.yml  lint.yml  semver.yml  tests.yml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/cloudflare-worker/: Cargo.toml  wrangler.toml
examples/cloudflare-worker/src/: lib.rs
examples/error_handling/: Cargo.toml
examples/market_data/: Cargo.toml
examples/order_management/: Cargo.toml
examples/position_management/: Cargo.toml
examples/private/: Cargo.toml  README.md
examples/public/: Cargo.toml  README.md
examples/session/: Cargo.toml
src/: auth.rs  client.rs  constants.rs  endpoints.rs  lib.rs  logger.rs  prelude.rs  rate_limit.rs  sleep_compat.rs  sync_compat.rs  time_compat.rs  utils.rs
src/config/: base.rs  credentials.rs  mod.rs  utils.rs
src/connection/: http_connection.rs  mod.rs
src/endpoints/: mod.rs  private.rs  public.rs  types.rs
src/error/: mod.rs
src/message/: builder.rs  mod.rs  request.rs  response.rs
src/model/: access_log.rs  account.rs  affiliate.rs  announcement.rs  api_key.rs  beneficiary.rs  block_trade.rs  book.rs  combo.rs  currency.rs  custody.rs  deposit.rs  email_settings.rs  fee.rs  funding.rs  http_types.rs  index.rs  instrument.rs  margin_model.rs  mass_quote.rs  mod.rs  option.rs  order.rs  other.rs  portfolio_simulation.rs  position.rs  self_trading.rs  settlement.rs  ticker.rs  trade.rs  trading_products.rs  tradingview.rs  transaction.rs  transfer.rs  trigger.rs  types.rs  user_lock.rs  wallet.rs  withdrawal.rs
src/model/request/: api_request.rs  mass_quote.rs  mod.rs  order.rs  position.rs  trade.rs  wallet.rs
src/model/response/: api_response.rs  block_rfq.rs  deposit.rs  margin.rs  mass_quote.rs  mmp.rs  mod.rs  order.rs  other.rs  position.rs  subaccount.rs  trade.rs  transfer.rs  trigger.rs  wallet.rs  withdrawal.rs
src/session/: http_session.rs  mod.rs
tests/: mod.rs
tests/Data/: account_summary.json  trades_response.json
tests/integration/: .env.example  Cargo.toml  lib.rs  mod.rs
tests/integration/account_management/: account_summary.rs  mod.rs  move_positions.rs  positions.rs  settlement_history.rs  subaccounts.rs  transaction_log.rs  user_trades.rs
tests/integration/auth/: api_key_authentication.rs  mod.rs  oauth2_authentication.rs  token_management.rs
tests/integration/block_rfq/: mod.rs  rfq.rs
tests/integration/connectivity/: connection_recovery.rs  mod.rs  network_resilience.rs  rate_limiting.rs  timeout_handling.rs
tests/integration/error_handling/: mod.rs  robust_error_handling.rs
tests/integration/market_data/: comprehensive_market_data.rs  mod.rs
tests/integration/order_management/: mod.rs
tests/integration/position_management/: mod.rs
tests/integration/session/: mod.rs  private_endpoints_tests.rs  public_endpoints_tests.rs
tests/integration/wallet/: deposits.rs  mod.rs  transfers.rs  withdrawals.rs
tests/unit/: account_tests.rs  api_key_tests.rs  beneficiary_tests.rs  block_trade_tests.rs  book_tests.rs  builder_tests.rs  client_tests.rs  combo_tests.rs  config_tests.rs  connection_tests.rs  currency_tests.rs  email_settings_tests.rs  funding_tests.rs  index_tests.rs  instrument_tests.rs  margin_model_tests.rs  message_tests.rs  mod.rs  option_tests.rs  order_tests.rs  other_model_tests.rs  other_tests.rs  private_endpoints_tests.rs  public_endpoints_tests.rs  response_other_tests.rs  response_tests.rs  self_trading_tests.rs  session_tests.rs  ticker_tests.rs  trade_tests.rs  trading_products_tests.rs  tradingview_tests.rs  transfer_tests.rs  types_tests.rs  utils_tests.rs  wallet_tests.rs  withdrawal_tests.rs
