[package]
name = "deribit-http"
version = "0.1.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "HTTP REST API client for Deribit trading platform"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/deribit-http"
homepage = "https://github.com/joaquinbejar/deribit-http"
keywords = ["finance", "deribit", "trading", "api", "http"]
categories = ["finance", "api-bindings", "web-programming::http-client"]

[workspace]
members = [
    "examples/public",
    "examples/private",
]


[dependencies]
deribit-base = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }



[workspace.dependencies]
deribit-base = { path = "../deribit-base" }
deribit-http = { path = "." }
#deribit-base = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
url = "2.4"
hmac = "0.12"
sha2 = "0.10"
urlencoding = "2.1"
dotenv = "0.15"
chrono = "0.4"
