[package]
name = "deribit-http"
version = "0.5.1"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "HTTP REST API client for Deribit trading platform"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/deribit-http"
homepage = "https://github.com/joaquinbejar/deribit-http"
keywords = ["finance", "deribit", "trading", "api", "http"]
categories = ["finance", "api-bindings", "web-programming::http-client"]

[workspace]
members = [
    "examples/public",
    "examples/private",
    "tests/integration",
]

[features]
default = ["native"]
native = ["tokio", "dotenv", "tracing-subscriber"]
wasm = ["async-lock", "futures-timer", "web-time", "tracing-web", "tracing-subscriber", "getrandom"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }
url = { workspace = true, features = ["serde"] }
pretty-simple-display = { workspace = true }
chrono = { workspace = true }
serde_with = { workspace = true }
async-lock = { version = "3.4", optional = true }
futures-timer = { version = "3.0", optional = true }

# Native-only dependencies
tokio = { workspace = true, optional = true }
dotenv = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

# WASM-only dependencies
web-time = { version = "1.1", optional = true }
tracing-web = { version = "0.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }

[dev-dependencies]
mockito = "1.7"
tokio = { workspace = true }

[workspace.dependencies]
deribit-http = { path = "." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
rand = "0.9"
base64 = "0.22"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1.49", features = ["full"] }
thiserror = "2.0"
hmac = "0.12"
sha2 = "0.10"
urlencoding = "2.1"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
pretty-simple-display = "0.1"
tracing-subscriber = "0.3"
serde_with = "3.14"