[package]
name = "deribit-worker-example"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
deribit-http = { path = "../..", default-features = false, features = ["wasm"] }
worker = "0.5"
serde_json = "1.0"
getrandom = { version = "0.3", features = ["wasm_js"] }

# This makes the package standalone (not part of parent workspace)
[workspace]
