[package]
name = "public"
version = "0.1.0"
edition = "2024"


[dependencies]
deribit-http = { workspace = true }
deribit-base = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
pretty-simple-display = { workspace = true }
serde_json = { workspace = true }