[package]
name = "deribit-http-integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "integration_tests"
path = "./lib.rs"



[dependencies]
deribit-http = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
dotenv = { workspace = true }
mockito = "1.7"
serial_test = "3.2"
url = { workspace = true }
serde_json = { workspace = true }

